WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279105
REGRESSION(
265569@main
): SVG paths can get clipped at tile boundaries
https://bugs.webkit.org/show_bug.cgi?id=279105
Summary
REGRESSION(265569@main): SVG paths can get clipped at tile boundaries
Santosh
Reported
2024-09-03 21:36:07 PDT
Created
attachment 472433
[details]
Graph Sample I have an SVG file that primarily consists of paths and lines, used to render graphs within a Cordova application. After updating to the latest iOS 18 beta, I noticed that the parabolic graphs drawn using paths are not rendering correctly—they appear broken, especially at the ends. To further investigate, I transferred an HTML file containing the SVG elements to an iPad running iOS 18 beta 7 and opened it using the Files app. The issue persists, with the SVG paths appearing broken. If you zoom in on the components slightly, the problem becomes even more noticeable. The issue seems isolated to the latest iOS 18 beta. I've attached an image preview of the broken SVG on the iPad running iOS 18 beta, as well as the HTML file for reference.
Attachments
Graph Sample
(20.02 KB, text/html)
2024-09-03 21:36 PDT
,
Santosh
no flags
Details
Image preview on iPad mini 6 running ios 18 beta
(177.80 KB, image/png)
2024-09-03 21:37 PDT
,
Santosh
no flags
Details
Simple SVG using the path tested on iPad mini 6 running ios 18 beta
(4.06 KB, text/html)
2024-09-04 02:42 PDT
,
Santosh
no flags
Details
Simple SVG preview on iPad mini 6 running ios 18 beta
(219.97 KB, image/jpeg)
2024-09-04 02:42 PDT
,
Santosh
no flags
Details
rendering on Safari on iPad Pro with a recent version of iOS18
(420.38 KB, image/png)
2024-09-13 08:15 PDT
,
Karl Dubost
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Santosh
Comment 1
2024-09-03 21:37:25 PDT
Created
attachment 472434
[details]
Image preview on iPad mini 6 running ios 18 beta
Santosh
Comment 2
2024-09-04 02:42:13 PDT
Created
attachment 472444
[details]
Simple SVG using the path tested on iPad mini 6 running ios 18 beta
Santosh
Comment 3
2024-09-04 02:42:44 PDT
Created
attachment 472445
[details]
Simple SVG preview on iPad mini 6 running ios 18 beta
Radar WebKit Bug Importer
Comment 4
2024-09-04 09:51:22 PDT
<
rdar://problem/135280080
>
Karl Dubost
Comment 5
2024-09-13 08:15:17 PDT
Created
attachment 472546
[details]
rendering on Safari on iPad Pro with a recent version of iOS18 I haven't tried on iPad Mini yet. But on iPad Pro it gets the right thing.
Karl Dubost
Comment 6
2024-09-13 08:16:33 PDT
ah maybe not. In the center, some lines are cut indeed.
Santosh
Comment 7
2024-09-17 08:08:35 PDT
Is there a plan in place to address this fix?
Simon Fraser (smfr)
Comment 8
2024-10-11 14:09:32 PDT
My guess is that this is caused by our "path intersects dirty rect" using a fast bounding box, not an accurate bounding box, similar to
bug 277624
.
Said Abou-Hallawa
Comment 9
2024-11-12 12:47:35 PST
This is a regression of
265569@main
(
bug 255898
).
269500@main
(
bug 263351
) just uncovered this regression.
Said Abou-Hallawa
Comment 10
2024-11-12 13:13:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36550
EWS
Comment 11
2024-11-13 10:59:12 PST
Committed
286550@main
(5eadead07f65): <
https://commits.webkit.org/286550@main
> Reviewed commits have been landed. Closing PR #36550 and removing active labels.
EWS
Comment 12
2024-12-11 17:22:40 PST
Committed
283286.588@safari-7620-branch
(bfdd18f4ba23): <
https://commits.webkit.org/283286.588@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2401 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug