REGRESSION(265569@main): SVG paths can get clipped at tile boundaries https://bugs.webkit.org/show_bug.cgi?id=279105 rdar://135280080

Reviewed by Simon Fraser.

When the distance between the current point and the end point of a cubic Bézier
curve is split into three equal parts with the two control points, the slope of
the curve can't be calculated from the derivative of the curve equation.

But in this case, the curve has to be quadratic which means the t-coordinate of
its vertex must be the mid-point between the current point and the end point.

* LayoutTests/svg/custom/quadratic-path-in-tiled-layer-expected.html: Added.
* LayoutTests/svg/custom/quadratic-path-in-tiled-layer.html: Added.
* Source/WebCore/platform/graphics/PathSegmentData.cpp:
(WebCore::calculateBezierExtremities):

Canonical link: https://commits.webkit.org/286550@main